--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"ارتباط دستگاه قطع شود؟"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"جفت کردن دستگاه جدید"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"بلوتوث"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"فردا دوباره به‌طور خودکار روشن شود"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"جفت کردن گوش راست"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"جفت کردن گوش چپ"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"جفت کردن گوش دیگر"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"نصب برنامه"</b>\n"برنامه‌هایی را که می‌خواهید در فضایتان به‌صورت خصوصی حفظ شود نصب کنید"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"به‌خاطر داشته باشید"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"برنامه‌ها هنگام قفل کردن فضا متوقف می‌شوند"</b>\n"وقتی فضای خود را قفل می‌کنید، برنامه‌های موجود در فضا متوقف می‌شوند و اعلانی از آن‌ها دریافت نخواهید کرد"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"درصورت قفل بودن فضای خصوصی، برنامه‌های فضای خصوصی در مدیر اجازه‌ها، داشبورد حریم خصوصی، و دیگر تنظیمات نشان داده نخواهد شد.\n\nنمی‌توانید فضای خصوصی‌تان را به دستگاه دیگری منتقل کنید. اگر می‌خواهید از آن در دستگاه دیگری استفاده کنید، باید فضای خصوصی دیگری راه‌اندازی کنید.\n\nهر کسی که دستگاه شما را به رایانه متصل کند یا برنامه‌های مخرب در دستگاهتان نصب کند ممکن است بتواند به فضای خصوصی شما دسترسی داشته باشد."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"وقتی فضایتان را قفل می‌کنید، برنامه‌های موجود در فضای خصوصی شما متوقف می‌شوند و اعلانی از آن‌ها دریافت نخواهید کرد.\n\nهنگام قفل بودن فضا، برنامه‌های موجود در فضای خصوصی شما در مدیر اجازه‌ها، داشبورد حریم خصوصی، و سایر تنظیمات نشان داده نمی‌شود.\n\nنمی‌توان فضای خصوصی شما را در دستگاه جدید بازیابی کرد. اگر می‌خواهید از فضای خصوصی در دستگاه دیگری استفاده کنید، باید فضای دیگری راه‌اندازی کنید.\n\nهر شخصی که دستگاه شما را به رایانه متصل کند یا برنامه‌های مخرب روی دستگاهتان نصب کند، ممکن است بتواند به فضای خصوصی شما دسترسی داشته باشد."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"درباره فضای خصوصی بیشتر بدانید"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"این کار چند لحظه طول می‌کشد"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"درحال راه‌اندازی فضای خصوصی…"</string>
@@ -3480,7 +3483,7 @@
     <string name="notification_history_view_settings" msgid="5269317798670449002">"مشاهده تنظیمات اعلان"</string>
     <string name="notification_history_open_notification" msgid="2655071846911258371">"باز کردن اعلان"</string>
     <string name="snooze_options_title" msgid="2109795569568344617">"مجاز کردن تعویق اعلان"</string>
-    <string name="notification_badging_title" msgid="5469616894819568917">"نقطه‌های اعلان در نماد برنامه"</string>
+    <string name="notification_badging_title" msgid="5469616894819568917">"نقطه اعلان روی نماد برنامه‌ها"</string>
     <string name="notification_bubbles_title" msgid="5681506665322329301">"حبابک‌ها"</string>
     <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"حبابک‌ها"</string>
     <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"نمایش مکالمه به‌صورت حباب"</string>
@@ -3610,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"این برنامه از تنظیمات پیشرفته پشتیبانی نمی‌کند"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"تنظیمات بیشتر"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"تنظیمات بیشتر داخل این برنامه دردسترس است"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"استراحت"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"استفاده از «استراحت»"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"وقتی اعلان‌های زیادی را در بازه زمانی کوتاهی دریافت کنید، دستگاهتان وقفه‌های صوتی و بالاپرهای روی صفحه را به‌حداقل می‌رساند. تماس‌ها، زنگ‌های ساعت، و مکالمه‌های اولویت‌دار همچنان طبق معمول هشدار می‌دهند، و همه اعلان‌های ارسال‌شده در «کشو اعلانات» قابل‌مشاهده هستند."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"اعمال کردن بر نمایه‌های کاری"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"برای برنامه‌های نمایه کاری اعمال می‌شود"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"‏خدمات یاور VR"</string>
