--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Құрылғы ажыратылсын ба?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Жаңа құрылғымен жұптастыру"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Ертең автоматты түрде қосылсын"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Оң құлақты жұптау"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Сол құлақты жұптау"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Екінші құлақты жұптау"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Қолданбалар орнату"</b>\n"Кеңістігіңізге құпия сақтағыңыз келетін қолданбаларды орнатуға болады."</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Есте сақтаңыз"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Кеңістігіңізді құлыптасаңыз, қолданбалардың жұмысы тоқтайды."</b>\n"Кеңістікті құлыптаған кезде, ондағы қолданбалар жұмысын тоқтатады және олардан хабарландырулар алмайсыз."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Құпия кеңістік құлыпталып тұрған кезде, ондағы қолданбалар \"Рұқсаттарды басқару\" бөлімінде, құпиялық тақтасында және басқа параметрлерде көрсетілмейді.\n\nҚұпия кеңістікті жаңа құрылғыға көшіруге болмайды. Оны басқа құрылғыда пайдаланғыңыз келсе, жаңасын орнатуыңыз керек.\n\nҚұрылғыңызды компьютерге жалғаған немесе оған зиянды қолданбалар орнатқан кез келген адам құпия кеңістігіңізге кіре алады."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Кеңістікті құлыптағанда, ондағы қолданбалар жұмысын тоқтатады және олардан хабарландырулар алмайсыз.\n\nҚұпия кеңістік құлыптаулы тұрғанда, ондағы қолданбалар \"Рұқсаттарды басқару\" бөлімінде, құпиялық тақтасында және басқа параметрлерде көрсетілмейді.\n\nҚұпия кеңістікті жаңа құрылғыда қалпына келтіре алмайсыз. Оны басқа құрылғыда пайдаланғыңыз келсе, жаңасын орнатуыңыз керек болады.\n\nҚұрылғыңызды компьютерге жалғаған немесе оған зиянды қолданбалар орнатқан кез келген адам құпия кеңістігіңізге кіре алады."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Құпия кеңістік туралы толық ақпарат"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Бұған бірнеше минут кетеді."</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Құпия кеңістік реттеліп жатыр…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Құпия кеңістіктің өзіне жаңа құлып орната аласыз немесе құрылғыңыздың құлпын ашу үшін пайдаланатын құлыпты пайдалана аласыз."</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Экран құлпын пайдалану"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Жаңа құлып таңдау"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Күте тұрыңыз…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Бәрі дайын!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Құпия кеңістігіңізді табу үшін қолданбалар тізіміне өтіп, төмен айналдырыңыз."</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Дайын"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Төменгі оң жақты түрту"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Қосымша опцияларды көру үшін сенсорлық тақтаның төменгі оң жақ бұрышын түртіңіз."</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Меңзер жылдамдығы"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Меңзердің бояу стилі"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Меңзердің бояу стилін қара түске өзгертеді."</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Меңзердің бояу стилін жасыл түске өзгертеді."</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Меңзердің бояу стилін сары түске өзгертеді."</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Меңзердің бояу стилін қызғылт түске өзгертеді."</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Меңзердің бояу стилін көк түске өзгертеді."</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Сенсорлық тақта қимылдарын үйрену"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"сенсорлық тақта, тінтуір, курсор, айналдыру, сырғыту, тінтуірдің оң жақ түймесін басу, басу, клик, меңзер"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"тінтуірдің оң жақ түймесін басу, түрту"</string>
@@ -2035,9 +2031,9 @@
     <string name="general_category_title" msgid="6298579528716834157">"Жалпы"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Дисплей"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Түс және қозғалыс"</string>
-    <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Түс конрасты"</string>
+    <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Түс конрасы"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Жоғары контраст мәтінді, түймелерді және белгішелерді ерекшелейді. Өзіңізге ұнайтын контрасты таңдаңыз."</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"Кейбір қолданбалар барлық түс және мәтін контрасты параметрін қолдамауы мүмкін."</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"Кейбір қолданбалар түс және мәтін контрасының барлық параметрін қолдамауы мүмкін."</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Алғы көрініс"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Хелен, Адам"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 күн бұрын"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Бұл қолданбада жақсартылған параметрлерге қолдау көрсетілмейді."</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Қосымша параметрлер"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Қолданбада қосымша параметрлер қолжетімді."</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Дыбысты азайту"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Дыбысты азайту параметрін пайдалану"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Қысқа уақыт аралығында көп хабарландыру алсаңыз, құрылғыңыз кедергі келтіретін дыбыстар мен экранда шығатын қалқымалы терезелер санын азайтады. Қоңыраулар, оятқыштар мен маңызды әңгімелер туралы хабарландырулар әдеттегідей келе береді. Жіберілген барлық хабарландыруды \"Shade\" бөлімінен оңай табуға болады."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Жұмыс профильдеріне қолдану"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Жұмыс профиліндегі қолданбаларға қолдану"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Көмекші VR қызметтері"</string>
@@ -3751,7 +3750,7 @@
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Ешқандай қоңырауға рұқсат жоқ"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Жоқ"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Оятқыштар"</string>
-    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Таймерден, оятқыштан, қауіпсіздік жүйесінен және басқа қолданбалардан шығатын дабыл"</string>
+    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Таймерлерден, оятқыштардан, қауіпсіздік жүйелерінен және басқа қолданбалардан шығатын сигнал"</string>
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"оятқыштар"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Оятқыштар"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Mультимeдиа дыбыстары"</string>
