--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Да прекине врската со уредот?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Спарете нов уред"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Автоматски вклучи повторно утре"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Спари го десното уво"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Спари го левото уво"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Спари го другото уво"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Инсталирајте апликации"</b>\n"Инсталирајте ги апликациите што сакате да останат приватни во вашиот „Приватен простор“"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Имајте предвид"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Апликациите сопираат кога ќе го заклучите вашиот „Приватен простор“"</b>\n"Кога ќе го заклучите вашиот „Приватен простор“, апликациите во него се сопираат и нема да добивате известувања од нив"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Апликациите од вашиот „Приватен простор“ нема да се појавуваат во „Управувач со дозволи“, „Контролна табла за приватност“, ниту во други поставки кога „Приватниот простор“ ви е заклучен.\n\nВашиот „Приватен простор“ не може да се премести на друг уред. Ќе треба да поставите друг „Приватен простор“ ако сакате да го користите на друг уред.\n\nАко некој го поврзе вашиот уред со компјутер или инсталира штетни апликации на уредот, можеби ќе може да пристапи до вашиот „Приватен простор“."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Кога ќе го заклучите вашиот „Приватен простор“, апликациите во него се сопираат и нема да добивате известувања од нив.\n\nАпликациите од вашиот „Приватен простор“ нема да се појавуваат во „Управувач со дозволи“, „Контролна табла за приватност“, ниту во други поставки кога „Приватниот простор“ е заклучен.\n\nВашиот „Приватен простор“ не може да се врати на нов уред. Ќе треба да поставите друг „Приватен простор“ ако сакате да го користите на друг уред.\n\nАко некој го поврзе вашиот уред со компјутер или инсталира злонамерни апликации на уредот, можеби ќе може да пристапи до вашиот „Приватен простор“."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Дознајте повеќе за „Приватен простор“"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Ова ќе трае неколку секунди"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Се поставува „Приватен простор“…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Може да поставите ново заклучување само за „Приватен простор“ или да го користите истото заклучување што го користите за отклучување на уредот"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Користете заклучување екран"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Изберете нов начин на заклучување"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Само момент…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Готово!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"За да го најдете вашиот „Приватен простор“, одете во списокот со апликации и лизгајте надолу"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Готово"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Допир долу десно"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Допрете го долниот десен агол од подлогата за допир за опции"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Брзина на покажувачот"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Стил на полнење на покажувачот"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Промена на стил. на покаж. во црн"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Промена на стил. на покаж. во зелен"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Промена на стил. на покаж. во жолт"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Промена на стил. на покаж. во розов"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Промена на стил. на покаж. во син"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Научете движења за подлога за допир"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"подлога на допир, допирна подлога, глувче, курсор, лизгање, повлекување, кликнување со десното копче, клик, покажувач"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"кликнување со десното копче, допир"</string>
@@ -3373,7 +3369,7 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"овозможете темна тема"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Префрлете ги OS и апликациите за да претпочитаат светол текст на темна заднина, што може да биде полесно за очите и овозможува значителна заштеда на батеријата на некои уреди"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Нема промени на екранот}=1{{effect_1}}=2{{effect_1} и {effect_2}}=3{{effect_1}, {effect_2} и {effect_3}}one{{effect_1}, {effect_2} и уште #}other{{effect_1}, {effect_2} и уште #}}"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Опции за екранот за филтрирани известувања"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Опции за прикажување филтрирани известувања"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Кога е вклучен режимот „Не вознемирувај“"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Без звук од известувањата"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Ќе гледате известувања на екранот"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Апликацијава не поддржува подобрени поставки"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Повеќе поставки"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Повеќе поставки се достапни во апликацијава"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Подискретни известувања"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Користење „Подискретни известувања“"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Кога ќе добиете многу известувања во краток временски период, вашиот уред ќе ги минимизира звучните прекини и скокачките прозорци на екранот. Известувањата за повиците, алармите и приоритетните разговори ќе ги добивате како и обично, а сите испорачани известувања може да се најдат лесно во „Панелот со известувања“."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Примени на работни профили"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Применете на апликациите во работниот профил"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Помошни услуги за VR"</string>
