--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"උපාංගය විසන්ධි කරන්නද?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"නව උපාංගය යුගල කරන්න"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"බ්ලූටූත්"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"හෙට ස්වයංක්‍රීයව නැවත ක්‍රියාත්මක කරන්න"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"දකුණු කණ යුගල කරන්න"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"වම් කණ යුගල කරන්න"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"ඔබගේ අනෙක් කණ යුගල කරන්න"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"යෙදුම් ස්ථාපන කරන්න"</b>\n"ඔබ පුද්ගලිකව තබා ගැනීමට කැමති යෙදුම් ඔබේ අවකාශය තුළ ස්ථාපන කරන්න"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"මතක තබා ගන්න"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"ඔබ ඔබේ අවකාශයට අගුලු දමන විට යෙදුම් නවතියි"</b>\n"ඔබ ඔබේ අවකාශයට අගුලු දමන විට, ඔබේ අවකාශය තුළ ඇති යෙදුම් නවතින අතර ඔබට ඒවායෙන් දැනුම්දීම් නොලැබෙයි"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"ඔබේ පෞද්ගලික අවකාශය අගුළු දමා ඇති විට ඔබේ පෞද්ගලික අවකාශයේ යෙදුම් අවසර කළමනාකරු, පෞද්ගලිකත්ව උපකරණ පුවරුව, සහ වෙනත් සැකසීම්වල දිස් නොවනු ඇත.\n\nඔබේ පෞද්ගලික අවකාශය නව උපාංගයකට ගෙන යා නොහැක. ඔබට එය වෙනත් උපාංගයක භාවිතා කිරීමට අවශ්‍ය නම් ඔබට වෙනත් පෞද්ගලික අවකාශයක් පිහිටුවීමට අවශ්‍ය වනු ඇත.\n\nඔබේ උපාංගය පරිගණකයකට සම්බන්ධ කරන හෝ ඔබේ උපාංගයෙහි හානිකර යෙදුම් ස්ථාපනය කරන ඕනෑම අයෙකුට ඔබේ පෞද්ගලික අවකාශයට ප්‍රවේශ විය හැක."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"ඔබ ඔබේ අවකාශයට අගුලු දමන විට, ඔබේ අවකාශය තුළ ඇති යෙදුම් නවතින අතර ඔබට ඒවායෙන් දැනුම්දීම් නොලැබෙයි.\n\nපුද්ගලික අවකාශය අගුලු දමා ඇති විට ඔබේ පුද්ගලික අවකාශය තුළ ඇති යෙදුම් අවසර කළමනාකරු, පෞද්ගලිකත්ව උපකරණ පුවරුව, සහ වෙනත් සැකසීම්වල දිස් නොවෙයි.\n\nඔබේ පුද්ගලික අවකාශය නව උපාංගයකට ප්‍රතිසාධන කළ නොහැක. ඔබ එය වෙනත් උපාංගයක් මත භාවිත කිරීමට කැමති නම් ඔබට තව අවකාශයක් සැකසීමට අවශ්‍ය වෙයි.\n\nඔබේ උපාංගය පරිගණකයකට සම්බන්‍ධ කරන හෝ ඔබේ උපාංගය මත අනිෂ්ට යෙදුම් ස්ථාපන කරන කිසි කෙනෙකුට ඔබේ පුද්ගලික අවකාශයට ප්‍රවේශ විය හැකි වේවි."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"රහසිගත අවකාශය ගැන තව දැන ගන්න"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"මෙයට මොහොතක් ගත වෙයි"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"පෞද්ගලික අවකාශය පිහිටුවමින්…"</string>
@@ -3610,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"මෙම යෙදුම වැඩිදියුණු කළ සැකසීම් සඳහා සහාය නොදක්වයි"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"තව සැකසීම්"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"මෙම යෙදුම තුළ තවත් සැකසීම් තිබේ"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"සන්සුන් වීම"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"සන්සුන් වීම භාවිත කරන්න"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"ඔබට කෙටි කාල පරාසයක් ඇතුළත බොහෝ දැනුම්දීඹ් ලැබෙන විට, ඔබේ උපාංගය ශබ්ද බාධා සහ තිරය මත උත්පතන අවම කරයි. ඇමතුම්, එලාම, ප්‍රමුඛ සංවාද තවම සාමාන්‍ය පරිදි අඟවන අතර බෙදා හරින ලද සියලුම දැනුම්දීම් Shade තුළ පහසුවෙන් සොයා ගත හැක."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"කාර්යාල පැතිකඩ සඳහා යොදන්න"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"කාර්යාල පැතිකඩ යෙදුම්වලට යොදන්න"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR උදවුකරු සේවා"</string>
