--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"要断开与该设备的连接吗？"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"与新设备配对"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"蓝牙"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"明天自动重新开启"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"为右耳进行配对"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"为左耳进行配对"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"为另一个耳朵进行配对"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"安装应用"</b>\n"将您不想公开的应用安装在私密空间中"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"注意事项"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"锁定您的私密空间后，应用将停止运行"</b>\n"在您锁定自己的私密空间后，其中的应用将停止运行，您也不会再收到来自这些应用的通知"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"私密空间处于锁定状态时，私密空间中的应用不会显示在权限管理器、隐私信息中心和其他设置中。\n\n私密空间无法转移到新设备。若要在其他设备上使用私密空间，您需要在该设备上再设置一个私密空间。\n\n如果有人将您的设备连接到电脑或在设备上安装了有害应用，或许就能够访问您的私密空间。"</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"在您锁定自己的私密空间后，其中的应用将停止运行，您也不会再收到来自这些应用的通知。\n\n私密空间处于锁定状态时，其中的应用不会显示在权限管理器、隐私信息中心和其他设置中。\n\n私密空间无法恢复到新设备。若要在其他设备上使用私密空间，您需要在该设备上再设置一个私密空间。\n\n如果有人将您的设备连接到计算机，或在您的设备上安装了恶意软件，他们或许能够访问您的私密空间。"</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"详细了解私密空间"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"这将需要一点时间"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"正在设置私密空间…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"您可以专为私密空间设置新的锁定方式，或使用设备屏锁来锁定此空间"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"使用屏锁"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"选择新的锁定方式"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"请稍候…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"设置完毕！"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"若要查找私密空间，请前往应用列表，然后向下滚动"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"完成"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"点按右下角"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"点按触控板的右下角即可查看更多选项"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"指针速度"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"指针填充样式"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"将指针填充样式更改为黑色"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"将指针填充样式更改为绿色"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"将指针填充样式更改为黄色"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"将指针填充样式更改为粉色"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"将指针填充样式更改为蓝色"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"了解触控板手势"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"触控板, 鼠标, 光标, 滚动, 滑动, 右键点击, 点击, 指针, trackpad, track pad, mouse, cursor, scroll, swipe, right click, click, pointer"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"右键点击, 点按, right click, tap"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"此应用不支持增强型设置"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"更多设置"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"您可以在此应用中使用更多设置"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"通知音量渐降"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"使用通知音量渐降功能"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"如果您在短时间内收到大量通知，设备将尽可能减少提示音干扰和屏幕上的弹出式通知。通话、闹钟和优先对话仍将正常提醒，并且在通知栏中可以轻松查看所有已发送的通知。"</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"应用于工作资料"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"应用至工作资料应用"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR 助手服务"</string>
