--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Cihaz ayrılsın?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Cihaz əlavə edin"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Sabah avtomatik olaraq yenidən aktiv edin"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Sağ qulaqlığı birləşdirin"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Sol qulaqlığı birləşdirin"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Digər qulaqlığı birləşdirin"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Tətbiqlər quraşdırın"</b>\n"Sahənizdə məxfi saxlamaq istədiyiniz tətbiqləri quraşdırın"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Nəzərdə saxlayın"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Sahəni kilidlədikdə tətbiqlər dayanır"</b>\n"Sahəni kilidlədikdə sahədəki tətbiqlər dayandırılır və onlardan bildirişlər almayacaqsınız"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Məxfi yer kilidləndikdə məxfi yerdəki tətbiqlər icazə meneceri, məxfilik paneli və digər ayarlarda görünməyəcək.\n\nMəxfi yer yeni cihaza köçürülə bilməz. Başqa cihazda istifadə etmək istəsəniz, başqa məxfi yer ayarlamalısınız.\n\nCihazı kompüterə qoşan və ya cihazda zərərli tətbiqlər quraşdıran istənilən şəxs məxfi yerə daxil ola bilər."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Sahəni kilidlədikdə sahədəki tətbiqlər dayandırılır və onlardan bildirişlər almayacaqsınız.\n\nŞəxsi sahə kilidləndikdə oradakı tətbiqlər icazə meneceri, məxfilik paneli və digər ayarlarda görünməyəcək.\n\nŞəxsi sahə yeni cihaza bərpa edilə bilməz. Başqa cihazda istifadə etmək istəsəniz, başqa sahə ayarlamalısınız.\n\nCihazı kompüterə qoşan və ya cihazınızda zərərli tətbiqlər quraşdıran hər kəs şəxsi sahənizə daxil ola bilər."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Şəxsi sahə haqqında ətraflı məlumat"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Bir neçə dəqiqə çəkəcək"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Məxfi yer ayarlanır…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Yalnız şəxsi sahə üçün yeni kilid təyin edə və ya cihaz kilidini açdığınız kiliddən istifadə edə bilərsiniz"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Ekran kilidi istifadə edin"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Yeni kilid seçin"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Bir saniyə…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Tam hazırdır!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Şəxsi sahəni tapmaq üçün tətbiq siyahısına keçib, aşağı sürüşdürün"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Hazırdır"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Aşağı sağa toxunma"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Digər seçimlər üçün taçpedin aşağı sağ küncünə toxunun"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Kursor sürəti"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Poynter doldurma üslubu"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Poynter doldurma üslubunu qaraya dəyişin"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Poynter doldurma üslubunu yaşıla dəyişin"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Poynter doldurma üslubunu sarıya dəyişin"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Poynter doldurma üslubunu çəhrayıya dəyişin"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Poynter doldurma üslubunu maviyə dəyişin"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Taçped jestlərini öyrənin"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"trekped, trek ped, maus, kursor, sürüşdürün, çəkin, sağ düymə ilə toxunun, klikləyin, poynter"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"sağ düymə ilə toxunun, basın"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Bu tətbiq geniş ayarları dəstəkləmir"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Digər ayarlar"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Bu tətbiqdə başqa ayarlar da var"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"İstirahət"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"İstirahət rejimindən istifadə edin"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Qısa müddət ərzində çox sayda bildirişlər aldığınız zaman cihazınız səs müdaxilələrini və ekrandakı popap bildirişlərini minimuma endirəcək. Zənglər, siqnallar və prioritet söhbətlər normal qaydada işləyəcək və çatdırılmış bütün bildirişləri Shade-də asanlıqla tapmaq olar."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"İş profillərinə tətbiq edin"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"İş profili tətbiqlərinə tətbiq edin"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR köməkçi xidmətləri"</string>
