--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Geräteverbindung trennen?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Neues Gerät koppeln"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Morgen automatisch wieder aktivieren"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Rechtes Gerät koppeln"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Linkes Gerät koppeln"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Anderes Ohr koppeln"</string>
@@ -382,7 +383,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_title_2" msgid="2580899232734177771">"So gehts"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_2" msgid="5909924864816776516">"Die Funktion „Entsperrung per Fingerabdruck“ erstellt ein eindeutiges Modell deines Fingerabdrucks, mit dem deine Identität bestätigt werden kann. Bei der Einrichtung legst du deinen Finger dazu immer wieder anders auf. Mit diesen Aufnahmen wird dann das Fingerabdruckmodell erstellt."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_2" msgid="3493356605815124807">"Die Funktion „Entsperrung per Fingerabdruck“ erstellt ein eindeutiges Modell des Fingerabdrucks deines Kindes, mit dem seine Identität bestätigt werden kann. Bei der Einrichtung legt es seinen Finger dazu immer wieder anders auf. Mit diesen Aufnahmen wird dann das Fingerabdruckmodell erstellt."</string>
-    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Die besten Ergebnisse erzielst du mit einem Displayschutz, der das Zertifikat „Made for Google“ hat. Bei anderen Displayschutzfolien wird dein Fingerabdruck möglicherweise nicht erkannt."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Die besten Ergebnisse erzielst du mit einem Displayschutz, der „Made for Google“-zertifiziert ist. Bei anderen Displayschutzfolien wird dein Fingerabdruck möglicherweise nicht erkannt."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Die besten Ergebnisse erzielst du mit einem Displayschutz, der das Zertifikat „Made for Google“ hat. Bei anderen Displayschutzfolien wird der Fingerabdruck deines Kindes möglicherweise nicht erkannt."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"Mit Smartwatch entsperren"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Apps installieren"</b>\n"Du kannst in deinem Profil Apps installieren, die privat bleiben sollen"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Wichtige Hinweise"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Apps werden beendet, wenn du dein Profil sperrst"</b>\n"Wenn du dein Profil sperrst, werden die Apps darin beendet und du erhältst von ihnen keine Benachrichtigungen"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Wenn dein vertrauliches Profil gesperrt ist, werden Apps in deinem vertraulichen Profil unter „Berechtigungsmanager“, „Privatsphäredashboard“ und in anderen Einstellungen nicht angezeigt.\n\nDein vertrauliches Profil kann nicht auf ein neues Gerät übertragen werden. Du musst ein weiteres vertrauliches Profil einrichten, wenn du es auf einem anderen Gerät verwenden möchtest.\n\nJeder, der dein Gerät mit einem Computer verbindet oder auf dem Gerät schädliche Apps installiert, kann möglicherweise auf dein vertrauliches Profil zugreifen."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Wenn du dein Profil sperrst, werden Apps in deinem vertraulichen Profil beendet und du erhältst von ihnen keine Benachrichtigungen.\n\nWenn dein vertrauliches Profil gesperrt ist, werden die Apps darin weder unter „Berechtigungsmanager“ und „Privatsphäredashboard“ noch in anderen Einstellungen angezeigt.\n\nDein vertrauliches Profil kann auf neuen Geräten nicht wiederhergestellt werden. Wenn du auf einem anderen Gerät ein vertrauliches Profil nutzen möchtest, musst du ein neues einrichten.\n\nPersonen, die dein Gerät mit einem Computer verbinden oder schädliche Apps auf deinem Gerät installieren, haben möglicherweise auch Zugriff auf dein vertrauliches Profil."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Informationen zum vertraulichen Profil"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Das kann einen Moment dauern"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Das vertrauliche Profil wird eingerichtet…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Du kannst für das vertrauliche Profil eine neue Sperre festlegen oder dieselbe Sperre nutzen, die du zum Entsperren deines Geräts verwendest"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Displaysperre verwenden"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Neue Sperre auswählen"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Einen Moment…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Fertig!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Ruf deine App-Liste auf und scrolle nach unten, um auf dein vertrauliches Profil zuzugreifen"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Fertig"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Unten rechts tippen"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Tippe unten rechts auf das Touchpad für weitere Optionen"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Zeigergeschwindigkeit"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Füllfarbe des Mauszeigers"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Zeigerfüllfarbe in Schwarz ändern"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Zeigerfüllfarbe in Grün ändern"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Zeigerfüllfarbe in Gelb ändern"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Zeigerfüllfarbe in Rosa ändern"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Zeigerfüllfarbe in Blau ändern"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Informationen zu Touchpad-Gesten"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"Touchpad, Touch-Pad, Maus, Cursor, scrollen, wischen, rechtsklicken, klicken, Zeiger"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"rechtsklicken, tippen"</string>
@@ -3373,7 +3369,7 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"Dunkles Design aktivieren"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Stelle das Betriebssystem und die Apps so ein, dass vor einem dunklen Hintergrund heller Text bevorzugt wird. Das strengt die Augen weniger an und kann auf manchen Geräten die Akkulaufzeit erheblich verlängern."</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Keine Änderungen der Anzeige}=1{{effect_1}}=2{{effect_1} und {effect_2}}=3{{effect_1}, {effect_2} und {effect_3}}other{{effect_1}, {effect_2} und # mehr}}"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Anzeige-Optionen für gefilterte Benachrichtigungen"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Anzeigeoptionen für gefilterte Benachrichtigungen"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Wenn „Bitte nicht stören“ aktiviert ist"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Kein akustisches Signal bei Benachrichtigungen"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Benachrichtigungen werden angezeigt"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Diese App unterstützt erweiterte Einstellungen nicht"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Weitere Einstellungen"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Weitere Einstellungen sind in dieser App verfügbar"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Lautstärke/Vibration verringern"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Verringern von Lautstärke und Vibration bei Benachrichtigungen verwenden"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Wenn du innerhalb eines kurzen Zeitraums viele Nachrichten erhältst, reduziert dein Gerät Töne und Pop‑ups auf dem Display. Töne für Anrufe, Wecker und priorisierte Unterhaltungen werden wie gewohnt abgespielt und alle empfangenen Benachrichtigungen lassen sich in der Benachrichtigungsleiste wiederfinden."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Auf Arbeitsprofile anwenden"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Auf Apps im Arbeitsprofil anwenden"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR-Hilfsdienste"</string>
@@ -3755,7 +3754,7 @@
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"Wecker"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Wecker"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Medientöne"</string>
-    <string name="zen_mode_media_summary" msgid="7174081803853351461">"Ton von Videos, Spielen und sonstigen Medien"</string>
+    <string name="zen_mode_media_summary" msgid="7174081803853351461">"Töne von Videos, Spielen und sonstigen Medien"</string>
     <string name="zen_mode_media_list" msgid="2006413476596092020">"Medien"</string>
     <string name="zen_mode_media_list_first" msgid="7824427062528618442">"Medien"</string>
     <string name="zen_mode_system" msgid="7301665021634204942">"Töne bei Berührung"</string>
@@ -4483,7 +4482,7 @@
     <string name="credman_confirmation_change_provider_positive_button" msgid="7732302992885116967">"Ändern"</string>
     <string name="credman_limit_error_msg_title" msgid="1525814645803612135">"Es können nur fünf Dienste aktiviert sein"</string>
     <string name="credman_limit_error_msg" msgid="2521803280130310063">"Bevor du einen weiteren Dienst hinzufügen kannst, musst du mindestens einen der aktivierten Dienste deaktivieren"</string>
-    <string name="credman_main_settings_intro_text" msgid="4981603639240772620">"Wähle den Dienst aus, in dem Daten Anmeldedaten und Autofill-Vorschläge gespeichert werden sollen („Bevorzugter Dienst“). Wenn auch andere Dienste Vorschläge liefern sollen, kannst du sie unter „Weitere Dienste“ aktivieren."</string>
+    <string name="credman_main_settings_intro_text" msgid="4981603639240772620">"Wähle den Dienst aus, in dem Anmeldedaten und Autofill-Vorschläge gespeichert werden sollen („Bevorzugter Dienst“). Wenn auch andere Dienste Vorschläge liefern sollen, kannst du sie unter „Weitere Dienste“ aktivieren."</string>
     <string name="credman_enable_confirmation_message" msgid="8407841892310870169">"%1$s ermittelt anhand der Inhalte auf deinem Bildschirm, welche Informationen automatisch ausgefüllt werden können."</string>
     <string name="credman_error_message_title" msgid="4099557206946333568">"Beschränkung für Passwörter, Passkeys und Datendienste"</string>
     <string name="credman_error_message" msgid="8334797097200415449">"Es können bis zu 5 Passwörter, Passkeys und Datendienste gleichzeitig aktiviert sein. Wenn du einen weiteren Dienst hinzufügen möchtest, deaktiviere einen anderen."</string>
