--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Déconnecter l\'appareil ?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Associer un appareil"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Réactiver automatiquement demain"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Associer le droit"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Associer le gauche"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Associer l\'autre appareil"</string>
@@ -382,7 +383,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_title_2" msgid="2580899232734177771">"Comment ça marche"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_2" msgid="5909924864816776516">"Le déverrouillage par empreinte digitale crée un modèle unique de votre empreinte pour confirmer votre identité. Celui-ci est généré lors de la configuration en scannant votre doigt dans différentes positions."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_2" msgid="3493356605815124807">"Le déverrouillage par empreinte digitale crée un modèle unique de l\'empreinte de votre enfant pour valider son identité. Ce modèle est généré lors de la configuration en scannant son doigt dans différentes positions."</string>
-    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Pour des résultats optimaux, utilisez une protection d\'écran certifiée Made for Google. D\'autres protections pourraient empêcher votre empreinte de fonctionner."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Pour de meilleurs résultats, utilisez une protection d\'écran certifiée Made for Google. Avec d\'autres protections d\'écran, il se peut que votre empreinte digitale ne soit pas reconnue."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Pour de meilleurs résultats, utilisez une protection d\'écran certifiée Made for Google. L\'empreinte digitale de votre enfant peut ne pas être reconnue avec d\'autres protections d\'écran."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"Déverrouillage par une montre"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Applis installées"</b>\n"Les applis installées que vous souhaitez garder privées dans votre espace"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"À noter"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Les applis s\'arrêtent lorsque vous verrouillez votre espace"</b>\n"Lorsque vous verrouillez votre espace, les applis qui s\'y trouvent s\'arrêtent et vous ne recevez plus de notifications de leur part"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Si vous verrouillez votre espace privé, les applis installées dans votre espace privé n\'apparaîtront pas dans le gestionnaire d\'autorisations, le tableau de bord Confidentialité, ni dans les autres paramètres.\n\nIl est impossible de basculer votre espace privé sur un autre appareil. Vous devrez configurer un autre espace privé si vous souhaitez l\'utiliser sur un autre appareil.\n\nQuiconque connecte votre appareil à un ordinateur ou y installe des applis malveillantes peut avoir accès à votre espace privé."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Lorsque vous verrouillez votre espace, les applis qui s\'y trouvent s\'arrêtent et vous ne recevez plus de notifications de leur part.\n\nLorsque votre espace privé est verrouillé, les applis qui s\'y trouvent n\'apparaissent ni dans le gestionnaire d\'autorisations, ni dans le tableau de bord Confidentialité. D\'autres paramètres sont également concernés.\n\nIl est impossible de restaurer votre espace privé sur un autre appareil. Si vous souhaitez l\'utiliser sur un autre appareil, vous devrez configurer un nouvel espace.\n\nQuiconque connecte votre appareil à un ordinateur ou installe des applis malveillantes sur votre appareil est susceptible d\'accéder à votre espace privé."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"En savoir plus sur l\'espace privé"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Cela peut prendre quelques instants"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Configuration de l\'espace privé…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Vous pouvez définir une nouvelle méthode de déverrouillage uniquement pour l\'espace privé, ou utiliser celle qui vous permet de déverrouiller votre appareil"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Utiliser le déverrouillage de l\'écran"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Choisir une autre méthode"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Un instant…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Tout est prêt !"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Pour accéder à votre espace privé, rendez-vous dans votre liste d\'applications, puis faites défiler vers le bas"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"OK"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Appui en bas à droite"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Appuyez en bas à droite du pavé tactile pour plus d\'options"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Vitesse du pointeur"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Style de remplissage du pointeur"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Définir rempl. pointeur sur noir"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Définir rempl. pointeur sur vert"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Définir rempl. pointeur sur jaune"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Définir rempl. pointeur sur rose"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Définir rempl. pointeur sur bleu"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Découvrir gestes au pavé tactile"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"pavé tactile, pavé tactile, souris, curseur, faire défiler, balayer, clic droit, clic, pointeur"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"clic droit, appuyer"</string>
@@ -2041,7 +2037,7 @@
     <string name="color_contrast_preview" msgid="6791430227535363883">"Aperçu"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"Il y a 2 jours"</string>
-    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Suivre ?"</string>
+    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Suivi ?"</string>
     <string name="color_contrast_preview_email_title" msgid="198712116139754823">"Rapport du déplacement professionnel"</string>
     <string name="color_contrast_preview_email_body" msgid="2714343154965937945">"Si vous avez des questions, veuillez contacter Helen ou moi-même. Ce rapport sera"</string>
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"Dépenses du client"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Cette appli n\'est pas compatible avec les paramètres avancés"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Autres paramètres"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"D\'autres paramètres sont disponibles dans l\'appli"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Détente"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Utiliser le mode Détente"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Si vous recevez de nombreuses notifications en peu de temps, votre appareil réduira le nombre d\'interruptions sonores et les pop-ups à l\'écran. Les alertes associées aux appels, aux alarmes et aux conversations prioritaires ne seront pas affectées, et toutes les notifications distribuées sont faciles à trouver dans le volet."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Appliquer aux profils professionnels"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Appliquer aux applis du profil professionnel"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Services d\'assistance RV"</string>
@@ -4483,7 +4482,7 @@
     <string name="credman_confirmation_change_provider_positive_button" msgid="7732302992885116967">"Modifier"</string>
     <string name="credman_limit_error_msg_title" msgid="1525814645803612135">"Seuls cinq services peuvent être activés"</string>
     <string name="credman_limit_error_msg" msgid="2521803280130310063">"Désactivez au moins un service pour pouvoir en ajouter un autre"</string>
-    <string name="credman_main_settings_intro_text" msgid="4981603639240772620">"Choisissez votre service préféré pour enregistrer les données de connexion et les suggestions de saisie automatique. Activez des services supplémentaires si vous souhaitez qu\'ils fournissent également des suggestions."</string>
+    <string name="credman_main_settings_intro_text" msgid="4981603639240772620">"Choisissez le service que vous préférez utiliser pour enregistrer les données de connexion et les suggestions de saisie automatique. Activez des services supplémentaires si vous souhaitez qu\'ils fournissent également des suggestions."</string>
     <string name="credman_enable_confirmation_message" msgid="8407841892310870169">"%1$s utilise ce qui est affiché à l\'écran pour déterminer ce qui peut être saisi automatiquement."</string>
     <string name="credman_error_message_title" msgid="4099557206946333568">"Limite de mots de passe, clés d\'accès et services de données"</string>
     <string name="credman_error_message" msgid="8334797097200415449">"Vous pouvez avoir jusqu\'à cinq mots de passe, clés d\'accès et services de données actifs à la fois. Pour en ajouter un, désactivez-en un autre."</string>
