--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"ផ្ដាច់​ឧបករណ៍?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"ផ្គូផ្គង​ឧបករណ៍ថ្មី"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"ប៊្លូធូស"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"បើកដោយស្វ័យប្រវត្តិម្ដងទៀតនៅថ្ងៃស្អែក"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"ផ្គូផ្គងឧបករណ៍ជំនួយការស្ដាប់ខាងស្ដាំ"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"ផ្គូផ្គងឧបករណ៍ជំនួយការស្ដាប់ខាងឆ្វេង"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"ផ្គូផ្គងឧបករណ៍ជំនួយការស្ដាប់ម្ខាងទៀតរបស់អ្នក"</string>
@@ -382,7 +383,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_title_2" msgid="2580899232734177771">"របៀបដែលវាដំណើរការ"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_2" msgid="5909924864816776516">"ការដោះសោ​ដោយស្កេន​ស្នាមម្រាមដៃ​បង្កើតគំរូស្នាមម្រាមដៃ​របស់អ្នក​ខុសប្លែកពីគេ ដើម្បីផ្ទៀងផ្ទាត់​ថាជាអ្នក។ ដើម្បីបង្កើត​គំរូស្នាមម្រាមដៃនេះ​ក្នុងអំឡុងពេល​រៀបចំ អ្នកនឹងត្រូវ​ថតរូបស្នាមម្រាមដៃ​របស់អ្នក​ពីផ្នែកខុសៗគ្នា។"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_2" msgid="3493356605815124807">"ការដោះសោ​ដោយប្រើស្នាមម្រាមដៃ​បង្កើតគំរូស្នាមម្រាមដៃ​របស់កូនអ្នក​ខុសប្លែកពីគេ ដើម្បីផ្ទៀងផ្ទាត់​ថាជាគាត់។ ដើម្បីបង្កើត​គំរូស្នាមម្រាមដៃនេះ​ក្នុងអំឡុងពេល​រៀបចំ គាត់នឹងត្រូវ​ថតរូបស្នាមម្រាមដៃ​របស់គាត់​ពីផ្នែក​ខុសៗគ្នា។"</string>
-    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ដើម្បីទទួលបាន​លទ្ធផល​ល្អបំផុត សូមប្រើកញ្ចក់​ការពារ​អេក្រង់​ដែលបានទទួលស្គាល់​ពី Made for Google។ តាមរយៈ​កញ្ចក់​ការពារ​អេក្រង់ផ្សេងទៀត ស្នាមម្រាមដៃរបស់អ្នកអាចមិនដំណើរការ។"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ដើម្បីទទួលបាន​លទ្ធផល​ល្អបំផុត សូមប្រើកញ្ចក់​ការពារ​អេក្រង់​ដែលបានទទួលស្គាល់​ពី Made for Google។ បើប្រើកញ្ចក់​ការពារ​អេក្រង់ផ្សេងទៀត ស្នាមម្រាមដៃរបស់អ្នកអាចមិនដំណើរការ។"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ដើម្បីទទួលបាន​លទ្ធផល​ល្អបំផុត សូមប្រើកញ្ចក់​ការពារ​អេក្រង់​ដែលបានទទួលស្គាល់​ពី Made for Google។ តាមរយៈ​កញ្ចក់​ការពារ​អេក្រង់ផ្សេងទៀត ស្នាមម្រាមដៃរបស់អ្នកអាចមិនដំណើរការ។"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"ការដោះសោដោយប្រើនាឡិកា"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"ដំឡើងកម្មវិធី"</b>\n"ដំឡើងកម្មវិធីដែលអ្នកចង់រក្សាឱ្យមានភាពឯកជននៅក្នុងលំហរបស់អ្នក"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"សូមចងចាំ"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"កម្មវិធីឈប់នៅពេលអ្នកចាក់សោលំហរបស់អ្នក"</b>\n"នៅពេលអ្នកចាក់សោលំហរបស់អ្នក កម្មវិធីនៅក្នុងលំហរបស់អ្នកត្រូវបានបញ្ឈប់ ហើយអ្នកនឹងមិនទទួលបានការជូនដំណឹងពីកម្មវិធីទាំងនេះទេ"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"កម្មវិធីនៅក្នុងលំហឯកជនរបស់អ្នកនឹងមិនបង្ហាញនៅក្នុងមុខងារគ្រប់គ្រងការអនុញ្ញាត ផ្ទាំងគ្រប់គ្រងឯកជនភាព និងការកំណត់ផ្សេងទៀតទេ នៅពេលលំហឯកជនរបស់អ្នកត្រូវបានចាក់សោ។\n\nមិនអាចផ្លាស់ទីលំហឯកជនរបស់អ្នកទៅឧបករណ៍ថ្មីបានទេ។ អ្នកនឹងត្រូវរៀបចំលំហឯកជនមួយទៀត ប្រសិនបើអ្នកចង់ប្រើវាលើឧបករណ៍មួយទៀត។\n\nនរណាក៏ដោយដែលភ្ជាប់ឧបករណ៍របស់អ្នកទៅកុំព្យូទ័រ ឬដំឡើងកម្មវិធីគ្រោះថ្នាក់នៅលើឧបករណ៍របស់អ្នក ប្រហែលអាចចូលប្រើប្រាស់លំហឯកជនរបស់អ្នកបាន។"</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"នៅពេលអ្នកចាក់សោលំហរបស់អ្នក កម្មវិធីនៅក្នុងលំហឯកជនរបស់អ្នកត្រូវបានបញ្ឈប់ ហើយអ្នកនឹងមិនទទួលបានការជូនដំណឹងពីកម្មវិធីទាំងនេះទេ។\n\nកម្មវិធីនៅក្នុងលំហឯកជនរបស់អ្នកនឹងមិនបង្ហាញនៅក្នុងមុខងារគ្រប់គ្រងការអនុញ្ញាត ផ្ទាំងគ្រប់គ្រងឯកជនភាព និងការកំណត់ផ្សេងទៀត នៅពេលលំហឯកជនត្រូវបានចាក់សោទេ។\n\nលំហឯកជនរបស់អ្នកមិនអាចស្ដារទៅឧបករណ៍ថ្មីបានទេ។ អ្នកនឹងត្រូវរៀបចំលំហផ្សេងទៀតប្រសិនបើអ្នកចង់ប្រើវានៅលើឧបករណ៍ផ្សេងទៀត។\n\nនរណាម្នាក់ដែលភ្ជាប់ឧបករណ៍របស់អ្នកទៅកុំព្យូទ័រ ឬដំឡើងកម្មវិធីគ្រោះថ្នាក់នៅលើឧបករណ៍របស់អ្នក ប្រហែលជាអាចចូលប្រើលំហឯកជនរបស់អ្នកបាន។"</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ស្វែងយល់បន្ថែមអំពីលំហឯកជន"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"សកម្មភាពនេះ​នឹងចំណាយពេល​បន្តិច"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"កំពុងរៀបចំលំហឯកជន…"</string>
@@ -3610,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"កម្មវិធីនេះមិនស្គាល់ការកំណត់ដែលប្រសើរឡើងទេ"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"ការកំណត់ច្រើនទៀត"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"អាចប្រើការកំណត់បានច្រើនទៀតនៅក្នុងកម្មវិធីនេះ"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"ឥទ្ធិពលក្រោយមក"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"ប្រើឥទ្ធិពលក្រោយមក"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"នៅពេលអ្នកទទួលបានការជូនដំណឹងច្រើនក្នុងរយៈពេលខ្លី ឧបករណ៍របស់អ្នកនឹងកាត់បន្ថយការរំខានដោយសំឡេង និងផ្ទាំងលោតឡើងនៅលើអេក្រង់។ ការហៅទូរសព្ទ ម៉ោរោទ៍ និងការសន្ទនាអាទិភាពនឹងនៅតែជូនដំណឹងជាធម្មតា ហើយការជូនដំណឹងដែលបានបញ្ជូនទាំងអស់ងាយស្រួលស្វែងរកនៅក្នុងផ្ទាំង។"</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"ដាក់ប្រើលើកម្រងព័ត៌មានការងារ"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"ដាក់ប្រើលើកម្មវិធីកម្រងព័ត៌មានការងារ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"សេវាកម្មជំនួយ VR"</string>
