--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Төхөөрөмжийг салгах уу?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Шинэ төхөөрөмж хослуулах"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Маргааш автоматаар дахин асаах"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Баруун чих хослуулах"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Зүүн чих хослуулах"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Нөгөө чихээ хослуулах"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Аппуудыг суулгах"</b>\n"Та орон зайдаа хувийн байлгахыг хүсэж буй аппуудаа суулгана уу"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Санамж"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Таныг орон зайгаа түгжихэд аппууд зогсдог"</b>\n"Таныг орон зайгаа түгжихэд таны орон зай дахь аппууд зогсох бөгөөд та тухайн аппуудаас мэдэгдэл хүлээн авахгүй"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Таны хаалттай орон зай түгжээтэй үед таны хаалттай орон зайн аппууд зөвшөөрлийн менежер, нууцлалын хяналтын самбар болон бусад тохиргоонд харагдахгүй.\n\nТаны хаалттай орон зайг шинэ төхөөрөмж рүү зөөх боломжгүй. Хэрэв та үүнийг өөр төхөөрөмжид ашиглахыг хүсвэл өөр хаалттай орон зай тохируулах шаардлагатай.\n\nТаны төхөөрөмжийг компьютерт холбодог эсвэл таны төхөөрөмжид аюултай аппууд суулгадаг аливаа хүн таны хаалттай орон зайд хандах боломжтой байж магадгүй."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Таныг орон зайгаа түгжихэд таны хаалттай орон зай дахь аппуудыг зогсоох бөгөөд та тухайн аппуудаас мэдэгдэл хүлээн авахгүй.\n\nХаалттай орон зай түгжээтэй үед таны хаалттай орон зай дахь аппууд зөвшөөрлийн менежер, нууцлалын хяналтын самбар болон бусад тохиргоонд харагдахгүй.\n\nТаны хаалттай орон зайг шинэ төхөөрөмжид сэргээх боломжгүй. Хэрэв та үүнийг өөр төхөөрөмжид ашиглахыг хүсвэл өөр орон зай тохируулах шаардлагатай болно.\n\nТаны төхөөрөмжийг компьютерт холбох эсвэл таны төхөөрөмжид хортой апп суулгах аливаа хүн таны хаалттай орон зайд хандах боломжтой байж магадгүй."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Хаалттай орон зайн нэмэлт мэдээлэл авах"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Үүнд хэдэн хором зарцуулна"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Хаалттай орон зайг тохируулж байна…"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Та зөвхөн хаалттай орон зайд шинэ түгжээ тохируулах эсвэл төхөөрөмжийнхөө түгжээг тайлахад ашигладаг ижил түгжээг ашиглах боломжтой"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Дэлгэцийн түгжээг ашиглах"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Шинэ түгжээ сонгох"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Түр хүлээнэ үү…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Тохируулж дууслаа!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Хаалттай орон зайгаа олохын тулд аппуудынхаа жагсаалт руу очоод, дараа нь доош гүйлгэнэ үү"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Болсон"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Баруун доод буланг товших"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Бусад сонголтыг авах бол мэдрэгч самбарын баруун доод буланг товших"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Заагчийн хурд"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Заагчийг дүүргэх загвар"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Заагчийг дүүргэх загварыг хар болго"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Заагчийг дүүргэх загварыг ногоон болго"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Заагчийг дүүргэх загварыг шар болго"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Заагчийг дүүргэх загварыг ягаан болго"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Заагчийг дүүргэх загварыг цэнхэр болго"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Мэдрэгч самбарын зангааг мэдэж авах"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"мэдрэгч самбар, мэдрэгч самбар, хулгана, курсор, гүйлгэх, шудрах, баруун талыг товших, товших, заагч"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"баруун талыг товших, товших"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Энэ апп нь сайжруулсан тохиргоог дэмждэггүй"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Бусад тохиргоо"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Энэ аппад бусад тохиргоо боломжтой"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Мэдэгдлийн хөргөлт"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Мэдэгдлийн хөргөлтийг ашиглах"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Та богино хугацаанд олон мэдэгдэл авсан үед таны төхөөрөмж саад болох дуу чимээ, дэлгэц дээрх попапуудыг багасгана. Дуудлага, сэрүүлэг, чухал харилцан яриа хэвийн байдлаар сэрэмжлүүлсэн хэвээр байх бөгөөд хүргэсэн бүх мэдэгдлийг Shade-с олоход хялбар байх болно."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Ажлын профайлуудад хэрэгжүүлэх"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Ажлын профайлын аппуудад ашиглах"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR туслагч үйлчилгээ"</string>
