--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"डिव्हाइस डिस्‍कनेक्‍ट करायचे का?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"नवीन डिव्हाइससोबत पेअर करा"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"ब्लूटूथ"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"उद्या पुन्हा आपोआप सुरू करा"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"उजवा कान पेअर करा"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"डावा कान पेअर करा"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"तुमचा दुसरा कान पेअर करा"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"अ‍ॅप्स इंस्टॉल करा"</b>\n"तुम्ही तुमच्या स्पेसमध्ये खाजगी ठेवायची असलेली ॲप्स इंस्टॉल करा"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"लक्षात ठेवा"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"तुम्ही तुमची स्पेस लॉक करता, तेव्हा ॲप्स थांबतात"</b>\n"तुम्ही तुमची स्पेस लॉक करता, तेव्हा तुमच्या स्पेसमधील ॲप्स थांबवली जातात आणि तुम्हाला त्यांच्याकडून नोटिफिकेशन मिळणार नाहीत"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"तुमची खाजगी स्पेस लॉक केलेली असताना तुमच्या खाजगी स्पेसमधील अ‍ॅप्स परवानगी व्यवस्थापक, गोपनीयता डॅशबोर्ड आणि इतर सेटिंग्जमध्ये दिसणार नाहीत.\n\nतुमची खाजगी स्पेस नवीन डिव्हाइसवर हलवली जाऊ शकत नाही. तुम्हाला दुसर्‍या डिव्हाइसवर वापरायची असल्यास, दुसरी खाजगी स्पेस सेट करावी लागेल.\n\nतुमच्‍या डिव्‍हाइसला कॉंप्युटरशी कनेक्ट करणारे किंवा तुमच्या डिव्‍हाइसवर हानिकारक अ‍ॅप्‍स इंस्टॉल करणारे कोणीही तुमची खाजगी स्पेस अ‍ॅक्सेस करू शकते."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"तुम्ही तुमची स्पेस लॉक करता, तेव्हा तुमच्या खाजगी स्पेसमधील ॲप्स थांबवली जातात आणि तुम्हाला त्यांच्याकडून नोटिफिकेशन मिळणार नाहीत.\n\nखाजगी स्पेस लॉक केलेली असताना तुमच्या खाजगी स्पेसमधील अ‍ॅप्स परवानगी व्यवस्थापक, गोपनीयता डॅशबोर्ड आणि इतर सेटिंग्जमध्ये दिसणार नाहीत.\n\nतुमची खाजगी स्पेस नवीन डिव्हाइसवर रिस्टोअर केली जाऊ शकत नाही. तुम्हाला ती दुसऱ्या डिव्हाइसवर वापरायची असल्यास तुम्हाला दुसरी स्पेस सेट करावी लागेल.\n\nतुमचे डिव्हाइस कॉंप्युटरशी कनेक्ट करणारे किंवा तुमच्या डिव्हाइसवर दुर्भावनापूर्ण ॲप्स इंस्टॉल करणारे कोणीही तुमची खाजगी स्पेस अ‍ॅक्सेस करू शकतात."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"खाजगी स्पेसबद्दल अधिक जाणून घ्या"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"यासाठी थोडा वेळ लागू शकतो"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"खाजगी स्पेस सेट करत आहे…"</string>
@@ -3610,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"हे ॲप वर्धित सेटिंग्जना सपोर्ट करत नाही"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"अधिक सेटिंग्ज"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"या अ‍ॅपमध्ये अधिक सेटिंग्ज उपलब्ध आहेत"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"कूलडाउन"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"कूलडाउन वापरा"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"तुम्हाला थोड्याच कालावधीमध्ये अनेक नोटिफिकेशन मिळतात, तेव्हा तुमचे डिव्हाइस स्क्रीनवरील आवाजाचे व्यत्यय आणि पॉप-अप कमी करेल. कॉल, अलार्म आणि प्राधान्य दिलेल्या संभाषणांसाठी तरीही सामान्य पद्धतीने सूचित केले जाईल व डिलिव्हर झालेली सर्व नोटिफिकेशन शेड मध्ये सहज शोधता येऊ शकतात."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"कार्य प्रोफाइलला लागू करा"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"कार्य प्रोफाइलच्या अ‍ॅप्सना लागू करा"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR मदतनीस सेवा"</string>
