--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"Koble fra enhet?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Koble til en ny enhet"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Slå på igjen i morgen automatisk"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Tilkoble høyre øre"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Tilkoble venstre øre"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Tilkoble det andre øret"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Installer apper"</b>\n"Installer apper du vil holde private, i området ditt"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Husk"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Apper stopper når du låser området ditt"</b>\n"Når du låser området, blir apper i området stoppet, og du mottar ikke varsler fra dem."</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Apper i det private området vises ikke i tillatelseskontrollen, personvernoversikten eller i andre innstillinger når det private området er låst.\n\nDet private området kan ikke flyttes til andre enheter. Hvis du vil bruke det private området på en annen enhet, må du konfigurere et nytt.\n\nHvis noen kobler enheten din til en datamaskin eller installerer skadelige apper på enheten, kan de kanskje åpne det private området ditt."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Når du låser området ditt, stoppes apper i det private området, og du mottar ikke varsler om dem.\n\nApper i det private området vises ikke i tillatelseskontrollen, personvernoversikten eller i andre innstillinger når det private området er låst.\n\nDet private området kan ikke gjenopprettes til andre enheter. Du må konfigurere et annet område hvis du vil bruke det på en annen enhet.\n\nAlle som kobler enheten din til en datamaskin eller installerer skadelige apper på enheten, kan muligens åpne det private området."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Finn ut mer om det private området"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Dette tar en liten stund"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Konfigurerer det private området …"</string>
@@ -624,8 +627,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Du kan angi en ny lås for det private området eller bruke den samme låsen som du bruker til å låse opp enheten"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Bruk skjermlåsen"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Velg en ny lås"</string>
-    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
-    <skip />
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Vent litt …"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Alt er klart!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"For å finne det private området, gå til applisten og rull nedover"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Ferdig"</string>
@@ -1921,18 +1923,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Trykk nederst til høyre"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Trykk nederst til høyre på styreflaten for alternativer"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Pekerhastighet"</string>
-    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
-    <skip />
-    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Markørfyllstil"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Endre markørfyllstilen til svart"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Endre markørfyllstilen til grønn"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Endre markørfyllstilen til gul"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Endre markørfyllstilen til rosa"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Endre markørfyllstilen til blå"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Lær styreflatebevegelser"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"styreflate, styre flate, mus, markør, rull, sveip, høyreklikk, klikk, peker"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"høyreklikk, trykk"</string>
@@ -3617,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Denne appen støtter ikke utvidete innstillinger"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Flere innstillinger"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Flere innstillinger er tilgjengelige i denne appen"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Nedkjøling"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Bruk nedkjøling"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Når du får mange varsler på kort tid, minimerer enheten lydforstyrrelser og forgrunnsvinduer på skjermen. Anrop, alarmer og prioriterte samtaler varsles som normalt, og det er enkelt å finne alle leverte varsler i panelet."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Bruk for jobbprofiler"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Bruk for apper i jobbprofilen"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Hjelpetjenester for VR"</string>
