--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"I-diskonekta ang device?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Magpares ng bagong device"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"Awtomatikong i-on ulit bukas"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Ipares ang kanan"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Ipares ang kaliwa"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Ipares ang kabila"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Mag-install ng mga app"</b>\n"Mag-install ng mga app na gusto mong panatilihing pribado sa iyong space"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Tandaan"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Hihinto ang mga app kapag na-lock mo ang iyong space"</b>\n"Kapag na-lock mo ang iyong space, hihinto ang mga app sa space mo at hindi ka makakatanggap ng mga notification mula sa mga iyon"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Hindi lalabas ang mga app sa iyong pribadong space sa manager ng pahintulot, dashboard ng privacy, at iba pang setting kapag naka-lock ang pribadong space mo.\n\nHindi puwedeng ilipat sa bagong device ang iyong pribadong space. Kakailanganin mong mag-set up ng isa pang pribadong space kung gusto mong gamitin ito sa ibang device.\n\nPuwedeng ma-access ng sinumang kokonekta sa iyong device sa isang computer o mag-i-install ng mga nakakapinsalang app sa device mo ang iyong pribadong space."</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Kapag na-lock mo ang iyong space, hihinto ang mga app sa space mo at hindi ka makakatanggap ng mga notification mula sa mga iyon.\n\nHindi lalabas ang mga app sa iyong pribadong space sa manager ng pahintulot, privacy dashboard, at iba pang setting kapag naka-lock ang pribadong space.\n\nHindi mare-restore sa bagong device ang iyong pribadong space. Kakailanganin mong mag-set up ng isa pang space kung gusto mo itong gamitin sa ibang device.\n\nPosibleng ma-access ng sinumang magkokonekta ng iyong device sa computer o mag-i-install ng mga nakakapinsalang app sa device mo ang iyong pribadong space."</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Matuto pa tungkol sa pribadong space"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Aabutin ito nang ilang sandali"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Sine-set up ang pribadong space…"</string>
@@ -3610,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Hindi sinusuportahan ng app na ito ang mga pinahusay na setting"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Higit pang setting"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"May higit pang setting na available sa loob ng app na ito"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"Cooldown"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"Gumamit ng Cooldown"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"Kapag nakakuha ka ng maraming notification sa loob ng maikling panahon, hihinaan ng iyong device ang mga abala sa tunog at pop-up sa screen. Magbibigay pa rin ng alerto ang mga tawag, alarm, at priyoridad na pag-uusap gaya ng normal, at madaling mahahanap ang mga inihatid na notification sa Shade."</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"Ilapat sa mga profile sa trabaho"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Ilapat sa mga app ng profile sa trabaho"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Mga serbisyong pantulong sa VR"</string>
