--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -65,7 +65,8 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"آلہ کو غیر منسلک کریں؟"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"نئے آلہ کا جوڑا بنائیں"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"بلوٹوتھ"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"کل دوبارہ خودکار طور پر آن کریں"</string>
+    <!-- no translation found for bluetooth_screen_auto_on_title (2203993262483477532) -->
+    <skip />
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"دائیں کان کا جوڑا بنائیں"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"بائیں کان کا جوڑا بنائیں"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"اپنے دوسرے کان کا جوڑا بنائیں"</string>
@@ -613,8 +614,10 @@
     <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"ایپس انسٹال کریں"</b>\n"وہ ایپس انسٹال کریں جنہیں آپ اپنی اسپیس میں نجی رکھنا چاہتے ہیں"</string>
     <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"یاد رکھیں"</string>
     <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"آپ کے اپنی اسپیس کو مقفل کرنے پر ایپس بند ہو جاتی ہیں"</b>\n"آپ کے اپنی اسپیس کو مقفل کرنے پر، آپ کی اسپیس میں موجود ایپس بند ہو جاتی ہیں اور آپ ان سے اطلاعات وصول نہیں کر سکیں گے"</string>
-    <string name="private_space_apps_permission_text" msgid="7030946025253366172">"جب آپ کی نجی اسپیس مقفل ہوتی ہے تو آپ کی نجی اسپیس میں موجود ایپس اجازتوں کے مینیجر، پرائیویسی ڈیش بورڈ اور دیگر ترتیبات میں ظاہر نہیں ہوں گی۔\n\nآپ کی نجی اسپیس کو کسی نئے آلے پر منتقل نہیں کیا جا سکتا۔ اگر آپ اسے کسی دوسرے آلے پر استعمال کرنا چاہتے ہیں تو آپ کو ایک اور نجی اسپیس سیٹ اپ کرنے کی ضرورت ہوگی۔\n\nکوئی بھی جو آپ کے آلے کو کمپیوٹر سے منسلک کرتا ہے یا آپ کے آلے پر نقصان دہ ایپس انسٹال کرتا ہے وہ آپ کی نجی اسپیس تک رسائی حاصل کر سکتا ہے۔"</string>
-    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"آپ کے اپنی اسپیس کو مقفل کرنے پر، آپ کی پرائیویٹ اسپیس میں موجود ایپس بند ہو جاتی ہیں اور آپ کو ان سے اطلاعات موصول نہیں ہوں گی۔\n\nپرائیویٹ اسپیس مقفل ہونے پر، آپ کی پرائیویٹ اسپیس میں موجود ایپس اجازتوں کے مینیجر، پرائیویسی ڈیش بورڈ اور دیگر ترتیبات میں دکھائی نہیں دیں گی۔\n\nآپ کی پرائیویٹ اسپیس کو کسی نئے آلے پر بحال نہیں کیا جا سکتا۔ اگر آپ اسپیس کو کسی دوسرے آلے پر استعمال کرنا چاہتے ہیں تو آپ کو ایک اور اسپیس سیٹ اپ کرنے کی ضرورت پڑے گی۔\n\nآپ کے آلے کو کسی کمپیوٹر سے منسلک کرنے یا آپ کے آلے پر نقصان دہ ایپس انسٹال کرنے والا کوئی بھی شخص آپ کی پرائیویٹ اسپیس تک رسائی حاصل کر سکتا ہے۔"</string>
+    <!-- no translation found for private_space_apps_permission_text (4416201648436201393) -->
+    <skip />
+    <!-- no translation found for private_space_settings_footer_text (3742468470394835356) -->
+    <skip />
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"پرائیویٹ اسپیس کے بارے میں مزید جانیں"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"اس میں کچھ وقت لگے گا"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"نجی اسپیس سیٹ اپ کی جا رہی ہے…"</string>
@@ -3610,9 +3613,12 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"یہ ایپ بہتر کردہ ترتیبات کو سپورٹ نہیں کرتی ہے"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"مزید ترتیبات"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"اس ایپ کے اندر مزید ترتیبات دستیاب ہیں"</string>
-    <string name="notification_polite_title" msgid="3801775758735739286">"کول ڈاؤن"</string>
-    <string name="notification_polite_main_control_title" msgid="855117131309844580">"کول ڈاؤن استعمال کریں"</string>
-    <string name="notification_polite_description" msgid="6414215800132666462">"جب آپ کو تھوڑے ہی وقت میں بہت ساری اطلاعات موصول ہوتی ہیں تو آپ کا آلہ اسکرین پر آواز کے خلل اور پاپ اپس کو کم از کم کر دے گا۔ کالز، الارمز اور ترجیحی گفتگوئیں اب بھی معمول کے مطابق الرٹ رہیں گی، اور تمام ڈیلیور کردہ اطلاعات کو شیڈ میں تلاش کرنا آسان ہے۔"</string>
+    <!-- no translation found for notification_polite_title (4737150709382859870) -->
+    <skip />
+    <!-- no translation found for notification_polite_main_control_title (7267191551379543859) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (7749280535620291610) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"دفتری پروفائلز پر لاگو کریں"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"دفتری پروفائل ایپس پر لاگو کریں"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"‏VR مددگار سروسز"</string>
